@@ -6,12 +6,15 @@ import domain.model.enums.PaymentType;
 import domain.model.filters.EnrollmentFilter;
 import domain.model.Enrollment;
 import domain.model.payments.Payment;
-import domain.model.payments.PixPayment;
-import domain.model.payments.CashPayment;
-import domain.model.payments.CreditCardPayment;
-import domain.model.payments.DebitCardPayment;
+import domain.model.payments.PaymentFactory;
 import domain.model.plans.Plan;
 import domain.model.Student;
+import exceptions.InvalidFormatFieldException;
+import exceptions.RequiredFieldException;
+import persistence.EnrollmentRepository;
+import persistence.PlanRepository;
+import persistence.StudentRepository;
+import util.CollectionUtils;
 import util.CurrencyFormatter;
 
 import java.time.LocalDate;
@@ -19,29 +22,62 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 
 /**
- * Serviço responsável por manter a coleção de matrículas em memória
- * e implementar as operações específicas da entidade Enrollment.
+ * Serviço responsável pelas operações específicas da entidade Enrollment.
+ *
+ * Delega o armazenamento e a persistência da coleção ao
+ * {@link EnrollmentRepository}, composto como atributo interno (relação de
+ * composição). O serviço cuida das regras de negócio (validação de parâmetros
+ * da matrícula, regras de pagamento, taxa de cancelamento via polimorfismo);
+ * o repositório cuida da coleção e — a partir da Etapa 4 — da persistência em
+ * arquivo, incluindo o estado do contador estático {@code Enrollment.nextCode}.
+ *
+ * Política de comunicação de falhas:
+ * - Argumentos obrigatórios nulos (aluno, plano, data) → {@link RequiredFieldException}.
+ * - Strings de pagamento mal formadas internamente → capturadas como
+ *   {@link NumberFormatException} e relançadas como {@link InvalidFormatFieldException}.
+ * - Demais validações de domínio (valores não positivos, data anterior a hoje,
+ *   duração abaixo do mínimo, matrícula cancelada não aceita pagamento) seguem
+ *   usando {@link OperationResult} com {@code success = false}.
+ * - A duplicidade de matrícula ativa é detectada pelo {@code FitManager}.
  */
 public class EnrollmentService {
 
-    private ArrayList<Enrollment> enrollments;
+    private EnrollmentRepository repository;
 
     public EnrollmentService() {
-        this.enrollments = new ArrayList<>();
+        this.repository = new EnrollmentRepository();
+    }
+
+    /**
+     * Expõe o repositório composto.
+     * Utilizado pelo orquestrador (FitManager) para coordenar persistência.
+     */
+    public EnrollmentRepository getRepository() {
+        return repository;
+    }
+
+    /**
+     * Conecta o repositório de alunos ao repositório de matrículas, para que
+     * a leitura do arquivo de matrículas consiga validar os CPFs dos alunos.
+     * Chamado pelo {@code FitManager} na construção.
+     */
+    public void linkStudentRepository(StudentRepository studentRepository) {
+        this.repository.setStudentRepository(studentRepository);
+    }
+
+    /**
+     * Conecta o repositório de planos ao repositório de matrículas, para que
+     * a leitura do arquivo de matrículas consiga resolver as referências de
+     * {@link Plan} pelo nome. Chamado pelo {@code FitManager} na construção.
+     */
+    public void linkPlanRepository(PlanRepository planRepository) {
+        this.repository.setPlanRepository(planRepository);
     }
 
     /**
      * Realiza a matrícula de um aluno em um plano.
-     * Cria um Enrollment e registra um pagamento inicial usando a subclasse correta
-     *
-     * @param paymentData dados adicionais do pagamento (variam por tipo):
-     *                    PIX: [pixKey]
-     *                    CREDIT_CARD: [installments, cardLastDigits]
-     *                    DEBIT_CARD: [cardLastDigits]
-     *                    CASH: [amountReceived]
-     * @return OperationResult com o Enrollment criado em data (se sucesso)
      */
-    public OperationResult enroll(
+    public OperationResult<Enrollment> enroll(
             Student student,
             Plan plan,
             LocalDate startDate,
@@ -51,15 +87,15 @@ public class EnrollmentService {
             String paymentDescription,
             String[] paymentData
     ) {
-        OperationResult validationResult = validateEnrollmentParams(
+        OperationResult<Void> validationResult = validateEnrollmentParams(
                 student, plan, startDate, durationMonths);
         if (!validationResult.isSuccess()) {
-            return validationResult;
+            return new OperationResult<>(false, validationResult.getMessage());
         }
 
-        OperationResult paymentValidation = validatePaymentParams(initialAmount, paymentType, paymentData);
+        OperationResult<Void> paymentValidation = validatePaymentParams(initialAmount, paymentType, paymentData);
         if (!paymentValidation.isSuccess()) {
-            return paymentValidation;
+            return new OperationResult<>(false, paymentValidation.getMessage());
         }
 
         double totalPrice = plan.calculateTotalPrice(durationMonths);
@@ -82,7 +118,7 @@ public class EnrollmentService {
         );
         enrollment.addPayment(initialPayment);
 
-        enrollments.add(enrollment);
+        repository.add(enrollment);
 
         String message = "✅ Matrícula realizada com sucesso!\n\n" +
                 "Código: " + enrollment.getCode() + "\n" +
@@ -93,47 +129,47 @@ public class EnrollmentService {
                 "Saldo Pendente: " + CurrencyFormatter.formatCurrency(enrollment.calculateBalance()) + "\n\n" +
                 initialPayment.getPaymentSummary();
 
-        return new OperationResult(true, message, enrollment);
+        return new OperationResult<>(true, message, enrollment);
     }
 
     /**
      * Valida os parâmetros necessários para uma matrícula.
+     * Argumentos nulos são tratados como campos obrigatórios ausentes.
      */
-    private OperationResult validateEnrollmentParams(
+    private OperationResult<Void> validateEnrollmentParams(
             Student student,
             Plan plan,
             LocalDate startDate,
             int durationMonths
     ) {
         if (student == null) {
-            return new OperationResult(false, "Aluno não pode ser nulo.");
+            throw new RequiredFieldException("Aluno");
         }
         if (plan == null) {
-            return new OperationResult(false, "Plano não pode ser nulo.");
+            throw new RequiredFieldException("Plano");
         }
         if (startDate == null) {
-            return new OperationResult(false, "Data de início não pode ser nula.");
+            throw new RequiredFieldException("Data de início");
         }
         if (startDate.isBefore(LocalDate.now())) {
-            return new OperationResult(false, "A data de início não pode ser anterior a hoje.");
+            return new OperationResult<>(false, "A data de início não pode ser anterior a hoje.");
         }
         if (durationMonths < plan.getMinimumDuration()) {
-            return new OperationResult(false,
+            return new OperationResult<>(false,
                     "A duração deve ser no mínimo " + plan.getMinimumDuration() +
                             (plan.getMinimumDuration() == 1 ? " mês" : " meses") + ".");
         }
-        return new OperationResult(true, "ok");
+        return new OperationResult<>(true, "ok");
     }
 
     /**
-     * Instancia a subclasse correta de Payment com base no PaymentType
-     * Este é o ÚNICO ponto do sistema que conhece as subclasse concretas de Payment.
+     * Instancia a subclasse correta de Payment com base no PaymentType.
+     * Delega a decisão ao {@link PaymentFactory} — reaproveitado também pelo
+     * {@code EnrollmentRepository} ao reconstruir pagamentos da persistência.
      *
-     * @param paymentData dados adicionais específicos do tipo:
-     *                    PIX: [pixKey]
-     *                    CREDIT_CARD: [installments, cardLastDigits]
-     *                    DEBIT_CARD: [cardLastDigits]
-     *                    CASH: [amountReceived]
+     * As conversões {@code Integer.parseInt}/{@code Double.parseDouble} são
+     * envoltas em {@code try-catch} para que qualquer {@link NumberFormatException}
+     * vinda de dados mal formados seja relançada como {@link InvalidFormatFieldException}.
      */
     private Payment createPaymentByType(
             double amount,
@@ -142,61 +178,37 @@ public class EnrollmentService {
             String description,
             String[] paymentData
     ) {
-        switch (paymentType) {
-            case PIX:
-                String pixKey = (paymentData != null && paymentData.length > 0 ? paymentData[0] : "");
-                return new PixPayment(amount, paymentDate, description, pixKey);
-            case CREDIT_CARD:
-                int installments = 1;
-                String creditDigits = "0000";
-                if(paymentData != null && paymentData.length >= 2) {
-                    installments = Integer.parseInt(paymentData[0]);
-                     creditDigits = paymentData[1];
-                }
-                return new CreditCardPayment(amount, paymentDate, description, installments, creditDigits);
-            case DEBIT_CARD:
-                String debitDigits = (paymentData != null && paymentData.length > 0 ? paymentData[0] : "0000");
-                return new DebitCardPayment(amount, paymentDate, description, debitDigits);
-            case CASH:
-                double amountReceived = amount;
-                if(paymentData != null && paymentData.length > 0) {
-                    amountReceived = Double.parseDouble(paymentData[0].replace(",", "."));
-                }
-                return new CashPayment(amount, paymentDate, description, amountReceived);
-            default:
-                return new PixPayment(amount, paymentDate, description, "");
+        try {
+            return PaymentFactory.create(paymentType, amount, paymentDate, description, paymentData);
+        } catch (NumberFormatException e) {
+            if (paymentType == PaymentType.CREDIT_CARD) {
+                throw new InvalidFormatFieldException("Número de parcelas", "Número inteiro");
+            }
+            throw new InvalidFormatFieldException("Valor recebido", "Número decimal (ex.: 99,90)");
         }
     }
 
     /**
      * Cancela uma matrícula ativa.
-     * Calcula a taxa de cancelamento via polimorfismo (plan.getCancellationFee)
-     * ANTES de efetuar o cancelamento, e inclui o resumo financeiro no resultado.
-     *
-     * @return OperationResult com o Enrollment em data (se sucesso)
      */
-    public OperationResult cancelEnrollment(int enrollmentCode) {
+    public OperationResult<Enrollment> cancelEnrollment(int enrollmentCode) {
         Enrollment enrollment = findByCode(enrollmentCode);
         if (enrollment == null) {
-            return new OperationResult(false, "Matrícula não encontrada.");
+            return new OperationResult<>(false, "Matrícula não encontrada.");
         }
 
         if (enrollment.getStatus() == EnrollmentStatus.CANCELLED) {
-            return new OperationResult(false, "Esta matrícula já foi cancelada.");
+            return new OperationResult<>(false, "Esta matrícula já foi cancelada.");
         }
 
-        // Calcula taxa de cancelamento ANTES de cancelar (polimorfismo)
         double cancellationFee = enrollment.getPlan().getCancellationFee(enrollment);
 
-        // Coleta informações financeiras antes do cancelamento
         double totalPrice = enrollment.getTotalPrice();
         double totalPaid = totalPrice - enrollment.calculateBalance();
         double pendingBalance = enrollment.calculateBalance();
 
-        // Efetua o cancelamento
         enrollment.cancel();
 
-        // Monta resumo financeiro do cancelamento
         String message = "✅ Matrícula " + enrollmentCode + " cancelada com sucesso!\n\n" +
                 "RESUMO FINANCEIRO DO CANCELAMENTO\n" +
                 "Valor total contratado: " + CurrencyFormatter.formatCurrency(totalPrice) + "\n" +
@@ -216,38 +228,32 @@ public class EnrollmentService {
                     enrollment.getPlan().getTypeName() + ")";
         }
 
-        return new OperationResult(true, message, enrollment);
+        return new OperationResult<>(true, message, enrollment);
     }
 
     /**
      * Busca a matrícula ativa de um aluno pelo CPF.
-     *
-     * @return OperationResult com o Enrollment encontrado em data (se sucesso)
      */
-    public OperationResult findActiveByStudentCpf(String cpf) {
-        if (cpf == null || cpf.trim().isEmpty()) {
-            return new OperationResult(false, "O CPF é obrigatório para consulta.");
+    public OperationResult<Enrollment> findActiveByStudentCpf(String cpf) {
+        if (cpf == null || cpf.isBlank()) {
+            throw new RequiredFieldException("CPF");
         }
 
-        for (Enrollment enrollment : enrollments) {
+        for (Enrollment enrollment : repository.listAll()) {
             if (enrollment.getStudentCpf().equals(cpf) &&
                     enrollment.getStatus() == EnrollmentStatus.ACTIVE) {
-                return new OperationResult(true, "Matrícula encontrada.", enrollment);
+                return new OperationResult<>(true, "Matrícula encontrada.", enrollment);
             }
         }
 
-        return new OperationResult(false, "Nenhuma matrícula ativa encontrada para este aluno.");
+        return new OperationResult<>(false, "Nenhuma matrícula ativa encontrada para este aluno.");
     }
 
     /**
      * Verifica se um aluno possui matrícula ativa.
-     * Usado pelo FitManager para validar remoção de alunos e nova matrícula.
-     *
-     * @param cpf CPF do aluno (apenas dígitos)
-     * @return true se o aluno possui ao menos uma matrícula ativa
      */
     public boolean hasActiveEnrollment(String cpf) {
-        for (Enrollment enrollment : enrollments) {
+        for (Enrollment enrollment : repository.listAll()) {
             if (enrollment.getStudentCpf().equals(cpf) &&
                     enrollment.getStatus() == EnrollmentStatus.ACTIVE) {
                 return true;
@@ -258,56 +264,48 @@ public class EnrollmentService {
 
     /**
      * Lista o histórico de matrículas de um aluno (ativas e canceladas).
-     *
-     * @return OperationResult com ArrayList<Enrollment> em data
      */
-    public OperationResult listHistoryByStudent(String cpf) {
-        if (cpf == null || cpf.trim().isEmpty()) {
-            return new OperationResult(false, "O CPF é obrigatório para consulta.");
+    public OperationResult<ArrayList<Enrollment>> listHistoryByStudent(String cpf) {
+        if (cpf == null || cpf.isBlank()) {
+            throw new RequiredFieldException("CPF");
         }
 
-        ArrayList<Enrollment> studentEnrollments = new ArrayList<>();
-        for (Enrollment enrollment : enrollments) {
-            if (enrollment.getStudentCpf().equals(cpf)) {
-                studentEnrollments.add(enrollment);
-            }
-        }
+        ArrayList<Enrollment> studentEnrollments = CollectionUtils.filter(
+                repository.listAll(),
+                enrollment -> enrollment.getStudentCpf().equals(cpf)
+        );
 
         if (studentEnrollments.isEmpty()) {
-            return new OperationResult(false, "Nenhuma matrícula encontrada para este aluno.");
+            return new OperationResult<>(false, "Nenhuma matrícula encontrada para este aluno.");
         }
 
-        return new OperationResult(true,
+        return new OperationResult<>(true,
                 studentEnrollments.size() + " matrícula(s) encontrada(s).",
                 studentEnrollments);
     }
 
     /**
      * Registra um novo pagamento para uma matrícula.
-     * Instancia a subclasse correta com o Payment e exibe o resumo via getPaymentSummary().
-     *
-     * @param paymentData dados adicionais específicos do tipo de pagamento
-     * @return OperationResult com o Payment criado em data (se sucesso)
      */
-    public OperationResult registerPayment(
+    public OperationResult<Payment> registerPayment(
             int enrollmentCode,
             double amount,
             PaymentType paymentType,
             String description,
             String[] paymentData
     ) {
-        OperationResult validationResult = validatePaymentParams(amount, paymentType, paymentData);
+        OperationResult<Void> validationResult = validatePaymentParams(amount, paymentType, paymentData);
         if (!validationResult.isSuccess()) {
-            return validationResult;
+            return new OperationResult<>(false, validationResult.getMessage());
         }
 
         Enrollment enrollment = findByCode(enrollmentCode);
         if (enrollment == null) {
-            return new OperationResult(false, "Matrícula não encontrada.");
+            return new OperationResult<>(false, "Matrícula não encontrada.");
         }
 
         if (enrollment.getStatus() == EnrollmentStatus.CANCELLED) {
-            return new OperationResult(false, "Não é possível registrar pagamento em matrícula cancelada.");
+            return new OperationResult<>(false, "Não é possível registrar pagamento em matrícula cancelada.");
         }
 
         Payment payment = createPaymentByType(amount, LocalDateTime.now(), paymentType, description, paymentData);
@@ -320,70 +318,62 @@ public class EnrollmentService {
                 "Total pago até o momento " + CurrencyFormatter.formatCurrency(totalPaid) + "\n" +
                 "Saldo restante " + CurrencyFormatter.formatCurrency(enrollment.calculateBalance());
 
-        return new OperationResult(true, message, payment);
+        return new OperationResult<>(true, message, payment);
     }
 
     /**
      * Valida os parâmetros de um pagamento.
-     * Inclui validação genérica (amount > 0, tipo não nulo) e
-     * validação específica para pagamento em dinheiro (amountReceived >= amount).
-     *
-     * Centraliza a verificação para evitar duplicação entre enroll() e registerPayment().
+     * A conversão de {@code amountReceived} para {@code double} é envolvida em
+     * {@code try-catch} para relançar {@link NumberFormatException} como
+     * {@link InvalidFormatFieldException}.
      */
-    private OperationResult validatePaymentParams(double amount, PaymentType paymentType, String[] paymentData) {
+    private OperationResult<Void> validatePaymentParams(double amount, PaymentType paymentType, String[] paymentData) {
         if (amount <= 0) {
-            return new OperationResult(false, "O valor do pagamento deve ser positivo.");
+            return new OperationResult<>(false, "O valor do pagamento deve ser positivo.");
         }
         if (paymentType == null) {
-            return new OperationResult(false, "O tipo de pagamento é obrigatório.");
+            return new OperationResult<>(false, "O tipo de pagamento é obrigatório.");
         }
 
-        //Validação específica para CashPayment: valor recebido >= valor do pagamento
         if (paymentType == PaymentType.CASH && paymentData != null && paymentData.length > 0) {
-            double amountReceveid = Double.parseDouble(paymentData[0].replace(",", "."));
-            if(amountReceveid < amount) {
-                return new OperationResult(false,"O valor recebido (" + CurrencyFormatter.formatCurrency(amountReceveid) +
-                        ") deve ser maior ou igual ao valor do pagamento ("+CurrencyFormatter.formatCurrency(amount) + ").");
+            double amountReceived;
+            try {
+                amountReceived = Double.parseDouble(paymentData[0].replace(",", "."));
+            } catch (NumberFormatException e) {
+                throw new InvalidFormatFieldException("Valor recebido", "Número decimal (ex.: 99,90)");
+            }
+            if (amountReceived < amount) {
+                return new OperationResult<>(false, "O valor recebido (" + CurrencyFormatter.formatCurrency(amountReceived) +
+                        ") deve ser maior ou igual ao valor do pagamento (" + CurrencyFormatter.formatCurrency(amount) + ").");
             }
         }
-        return new OperationResult(true, "ok");
+        return new OperationResult<>(true, "ok");
     }
 
     /**
      * Lista matrículas que atendem ao critério de um filtro polimórfico.
-     *
-     * Método genérico que aplica qualquer EnrollmentFilter à coleção,
-     * eliminando a necessidade de criar métodos específicos para cada
-     * tipo de filtragem. Novos filtros podem ser adicionados sem alterar
-     * este serviço (princípio Open/Closed).
-     *
-     * @param filter filtro polimórfico a ser aplicado
-     * @return OperationResult com ArrayList<Enrollment> em data
      */
-    public OperationResult listByFilter(EnrollmentFilter filter) {
-        ArrayList<Enrollment> filtered = new ArrayList<>();
-        for (Enrollment enrollment : enrollments) {
-            if (filter.matches(enrollment)) {
-                filtered.add(enrollment);
-            }
-        }
+    public OperationResult<ArrayList<Enrollment>> listByFilter(EnrollmentFilter filter) {
+        ArrayList<Enrollment> filtered = CollectionUtils.filter(
+                repository.listAll(),
+                filter::matches
+        );
 
         if (filtered.isEmpty()) {
-            return new OperationResult(false,
+            return new OperationResult<>(false,
                     "Nenhuma matrícula encontrada para o filtro: " + filter.getDescription() + ".");
         }
 
-        return new OperationResult(true,
+        return new OperationResult<>(true,
                 filtered.size() + " matrícula(s) encontrada(s) — " + filter.getDescription() + ".",
                 filtered);
     }
 
     /**
      * Busca uma matrícula pelo código.
-     * Utilizado internamente para validações e operações.
      */
     public Enrollment findByCode(int code) {
-        for (Enrollment enrollment : enrollments) {
+        for (Enrollment enrollment : repository.listAll()) {
             if (enrollment.getCode() == code) {
                 return enrollment;
             }
@@ -393,60 +383,38 @@ public class EnrollmentService {
 
     /**
      * Lista todas as matrículas (ativas e canceladas).
-     *
-     * @return OperationResult com ArrayList<Enrollment> em data
      */
-    public OperationResult listAll() {
-        if (enrollments.isEmpty()) {
-            return new OperationResult(false, "Nenhuma matrícula cadastrada no sistema.");
+    public OperationResult<ArrayList<Enrollment>> listAll() {
+        if (repository.isEmpty()) {
+            return new OperationResult<>(false, "Nenhuma matrícula cadastrada no sistema.");
         }
 
-        return new OperationResult(true,
-                enrollments.size() + " matrícula(s) encontrada(s).",
-                new ArrayList<>(enrollments));
+        return new OperationResult<>(true,
+                repository.count() + " matrícula(s) encontrada(s).",
+                repository.listAll());
     }
 
     /**
-     * Lista apenas as matrículas ativas.
+     * Insere uma matrícula totalmente montada (com código, status, cancelledAt
+     * e pagamentos já populados) diretamente no repositório, sem aplicar as
+     * validações do fluxo de negócio.
      *
-     * @return OperationResult com ArrayList<Enrollment> em data
-     */
-    public OperationResult listActive() {
-        ArrayList<Enrollment> activeEnrollments = new ArrayList<>();
-        for (Enrollment enrollment : enrollments) {
-            if (enrollment.getStatus() == EnrollmentStatus.ACTIVE) {
-                activeEnrollments.add(enrollment);
-            }
-        }
-
-        if (activeEnrollments.isEmpty()) {
-            return new OperationResult(false, "Nenhuma matrícula ativa encontrada.");
-        }
-
-        return new OperationResult(true,
-                activeEnrollments.size() + " matrícula(s) ativa(s) encontrada(s).",
-                activeEnrollments);
-    }
-
-    /**
-     * Lista apenas as matrículas que possuem saldo pendente (não estão totalmente pagas).
+     * <p>Uso EXCLUSIVO para mocks de dados de demonstração: permite criar
+     * matrículas com datas no passado, históricos retroativos e estados pré-
+     * existentes (CANCELLED com cancelledAt arbitrário) que o fluxo regular
+     * de {@link #enroll} rejeitaria.</p>
      *
-     * @return OperationResult com ArrayList<Enrollment> em data
+     * <p>Ajusta o contador estático {@code Enrollment.nextCode} se necessário
+     * para que matrículas criadas pelo fluxo regular após a chamada não
+     * reutilizem o código injetado.</p>
      */
-    public OperationResult listWithPendingBalance() {
-        ArrayList<Enrollment> pendingEnrollments = new ArrayList<>();
-        for (Enrollment enrollment : enrollments) {
-            if (enrollment.calculateBalance() > 0) {
-                pendingEnrollments.add(enrollment);
-            }
+    public void mockEnrollment(Enrollment enrollment) {
+        if (enrollment == null) {
+            throw new RequiredFieldException("Matrícula");
         }
-
-        if (pendingEnrollments.isEmpty()) {
-            return new OperationResult(false, "Nenhuma matrícula com saldo pendente.");
+        repository.add(enrollment);
+        if (enrollment.getCode() >= Enrollment.getNextCode()) {
+            Enrollment.setNextCode(enrollment.getCode() + 1);
         }
-
-        return new OperationResult(true,
-                pendingEnrollments.size() + " matrícula(s) com saldo pendente encontrada(s).",
-                pendingEnrollments);
     }
 }
